# ltl-tool-detection-planner-and-booker

./: .env.demo.example  .env.example  .gitignore  CLAUDE.md  LtlTool.sln  Makefile  MyApp.sln  README.md  ROADMAP.md  SUMMARY-redesign.md  TEMPLATE_SETUP.md  docker-compose.demo.yml  docker-compose.yml  start-demo.sh  stop-demo.sh
.devcontainer/: devcontainer.json  post-create.sh  print-demo-help.sh
docs/: ALVYS_API_DECISIONS.md  ALVYS_INTEGRATION.md  ALVYS_MCP_SETUP.md  AUTO_CONSOLIDATE_SPEC.md  AZURE_HOSTING.md  AZURE_RESOURCE_PROVISIONING.md  AZURE_STANDALONE_DEPLOY.md  AZURE_UAT_DEPLOY.md  BOUNDARIES.md  BUILD_AND_LAUNCH.md  CLAUDE_LTL_MARKET_PARITY_INSTRUCTIONS.md  GHCR_AZURE_CONTAINER_APPS_DEPLOY.md  JASON_MEETING_STATUS.md  LOCAL_DEMO.md  LTL_DEMO_RUNBOOK.md  LTL_STABILITY_VERIFICATION.md  PILOT_LAREDO_DALLAS.md  PRE_DEMO_CHECKLIST.md  TESTING.md  UAT_PARITY_STATUS.md  YARD_LTL_INGESTION.md  codespaces-demo.md  demo-ngrok.md  ltl-operational-context.md  ltl-tool.md  phase-2-sprint-1-narrative.md
infra/: README.md  main.bicep  main.parameters.json
services/trailer-fit/: .dockerignore  Dockerfile  README.md  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt
services/trailer-fit/app/: main.py  models.py
services/trailer-fit/scripts/: export_openapi.py
services/trailer-fit/tests/: conftest.py  test_endpoints.py  test_wrapper.py
services/trailer-fit/ytl/logistics_objects/: common.py  trailer.py
services/trailer-fit/ytl/optimizer_functions/shipment_arrangement/: greedy.py
services/trailer-fit/ytl/services/: trailer_load_api.py
(+646 files in other folders)
